Initial GitHub Pages commit

--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bailey's Deals</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="manifest.json">
-</head>
-<body>
-    <header>
-        <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo">
-        <h1>Bailey's Discount Center</h1>
-    </header>
-    <main>
-        <section id="notifications">
-            <h2>New Deals Notifications</h2>
-            <div id="notification-list">
-                <!-- Notifications will be dynamically added here -->
-            </div>
-        </section>
-        <section id="deals">
-            <h2>Latest Deals</h2>
-            <div class="deal">
-                <img src="images/deal1.jpg" alt="Dining Sets Deal">
-                <p>Martin Svensson Dining Sets - $599.99</p>
-            </div>
-            <div class="deal">
-                <img src="images/deal2.jpg" alt="Hammock Deal">
-                <p>Bliss Hammock with Stand - $99.99</p>
-            </div>
-            <div class="deal">
-                <img src="images/deal3.jpg" alt="Shine Water Deal">
-                <p>Shine Water - $2.99/case</p>
-            </div>
-            <div class="deal">
-                <img src="images/deal4.jpg" alt="Garden Planters Deal">
-                <p>Modular Garden Planters - from $4.99</p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>Stop by our store: 5900 S. Range Rd., North Judson, IN</p>
-    </footer>
-    <script src="renderer.js"></script>
-</body>
-</html>
+"Hello, GitHub Pages!" 
