--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <header>
         <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo">
         <h1>Bailey's Discount Center</h1>
+        <div class="notification-bell">
+            <img src="images/bell.png" alt="Notifications" class="bell-icon">
+            <span class="notification-count" id="notification-count">4</span> <!-- Example count -->
+        </div>
     </header>
     <main>
-        <section id="notifications">
-            <h2>New Deals Notifications</h2>
-            <div id="notification-list">
-                <!-- Notifications will be dynamically added here -->
-            </div>
-        </section>
         <section id="deals">
             <h2>Latest Deals</h2>
             <div class="deal">
