--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo">
+        <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo" onclick="window.location.href='index.html'">
         <h1>Bailey's Discount Center</h1>
         <div class="notification-bell">
             <img src="images/bell.png" alt="Notifications" class="bell-icon">
@@ -52,6 +52,10 @@
                 <img src="images/deal4.jpg" alt="Garden Planters Deal">
                 <p>Modular Garden Planters - from $4.99</p>
             </div>
+        </section>
+        <section id="about">
+            <h2>About Us</h2>
+            <a href="about.html">Learn more about Bailey's Discount Center</a>
         </section>
     </main>
     <footer>
