--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
             <img src="images/bell.png" alt="Notifications" class="bell-icon">
             <span class="notification-count" id="notification-count">4</span> <!-- Example count -->
         </div>
+        <div class="hamburger-menu" onclick="toggleMenu()">☰</div>
     </header>
+    <nav id="nav-menu" class="nav-menu">
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <!-- Add more links as needed -->
+    </nav>
     <main>
         <section id="deals">
             <h2>Latest Deals</h2>
@@ -53,14 +59,16 @@
                 <p>Modular Garden Planters - from $4.99</p>
             </div>
         </section>
-        <section id="about">
-            <h2>About Us</h2>
-            <a href="about.html">Learn more about Bailey's Discount Center</a>
-        </section>
     </main>
     <footer>
         <p>Stop by our store: 5900 S. Range Rd., North Judson, IN</p>
     </footer>
     <script src="renderer.js"></script>
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('nav-menu');
+            menu.classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
