Add Store Hours page and update navigation

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <nav id="nav-menu" class="nav-menu">
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <!-- Add more links as needed -->
+        <a href="hours.html">Store Hours</a>
     </nav>
     <main>
         <section id="about-us">
