--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <body>
     <header>
         <div class="hamburger-menu" onclick="toggleMenu()">☰</div>
-        <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo" onclick="window.location.href='index.html'">
-        <h1>Bailey's Discount Center</h1>
+        <div class="banner">
+            <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo" onclick="window.location.href='index.html'">
+        </div>
         <div class="notification-bell">
             <img src="images/bell.png" alt="Notifications" class="bell-icon">
             <span class="notification-count" id="notification-count">4</span> <!-- Example count -->
@@ -63,6 +64,10 @@
     <footer>
         <p>Stop by our store: 5900 S. Range Rd., North Judson, IN</p>
     </footer>
+    <div id="popup">
+        <div id="notification-list"></div>
+        <button class="close-btn">Close</button>
+    </div>
     <script src="renderer.js"></script>
     <script>
         function toggleMenu() {
