--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 </head>
 <body>
     <header>
-        <div class="hamburger-menu" onclick="toggleMenu()">☰</div>
+        <div class="hamburger-menu" id="hamburger-menu">☰</div>
         <div class="banner">
             <img src="images/logo.png" alt="Bailey's Discount Center Logo" class="logo" onclick="window.location.href='index.html'">
         </div>
         <div class="notification-bell">
-            <img src="images/bell.png" alt="Notifications" class="bell-icon">
+            <img src="images/bell.png" alt="Notifications" class="bell-icon" id="bell-icon">
             <span class="notification-count" id="notification-count">4</span> <!-- Example count -->
         </div>
     </header>
@@ -66,14 +66,8 @@
     </footer>
     <div id="popup">
         <div id="notification-list"></div>
-        <button class="close-btn">Close</button>
+        <button class="close-btn" id="close-btn">Close</button>
     </div>
     <script src="renderer.js"></script>
-    <script>
-        function toggleMenu() {
-            const menu = document.getElementById('nav-menu');
-            menu.classList.toggle('active');
-        }
-    </script>
 </body>
 </html>
