Ensure hamburger menu works on all pages

--- a/about.html
+++ b/about.html
@@ -37,6 +37,10 @@
     <footer>
         <p>Stop by our store: 5900 S. Range Rd., North Judson, IN</p>
     </footer>
+    <div id="popup">
+        <div id="notification-list"></div>
+        <button class="close-btn" id="close-btn">Close</button>
+    </div>
     <script src="renderer.js"></script>
 </body>
 </html>
