--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="hours.html">Store Hours</a>
+        <a href="gallery.html"> Photo Gallery</a>
     </nav>
     <main>
         <section id="deals">
