Add gallery page with 19 images and update navigation menu

--- a/hours.html
+++ b/hours.html
@@ -21,6 +21,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="hours.html">Store Hours</a>
+        <a href="gallery.html"> Photo Gallery</a>
     </nav>
     <main>
         <section id="store-hours">
