--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="hours.html">Hours</a>
-            <a href="gallery.html"> Photo Gallery</a>
+            <a href="gallery.html">Gallery</a>
         </nav>
     </header>
     <main>
